# telecom-protocol-log-analyzer

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: default_timer_profiles.yaml
docs/: limitations.md  protocol_flows.md  real_world_trace_workflow.md  sample_reports.md  troubleshooting_rules.md
docs/reports/: registration_auth_failure_report.html  registration_auth_failure_report.md  sample_tshark_registration_report.md
examples/: run_demo.sh
src/telecom_log_analyzer/: __init__.py  __main__.py  analyzer.py  cli.py  correlator.py  generator.py  models.py  parser.py  protocol_reference.py  report.py  rules.py  sessionizer.py  state_machines.py  timers.py  utils.py
src/telecom_log_analyzer/adapters/: __init__.py  base.py  jsonl.py  simplified_text.py  tshark_json.py
src/telecom_log_analyzer/knowledge_base/: __init__.py  cause_codes.yaml  loader.py
tests/: test_adversarial_review_regressions.py  test_cli.py  test_generator_and_state_machines.py  test_hidden_style_logs.py  test_parser.py  test_report.py  test_rules_handover.py  test_rules_pdu_session.py  test_rules_registration.py  test_rules_rrc.py  test_sessionizer.py  test_v2_cli_and_adapters_extra.py  test_v2_defensive_coverage.py  test_v2_ingestion.py
tests/fixtures/tshark/: malformed_missing_fields.tshark.json  sample_registration.tshark.json
