[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "telecom-protocol-log-analyzer"
version = "0.1.0"
description = "CLI analyzer for simplified 4G/5G protocol troubleshooting logs."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Telecom Protocol Log Analyzer"}]
keywords = ["5g", "lte", "telecom", "rrc", "nas", "ngap", "troubleshooting"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Telecommunications Industry",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: System :: Networking :: Monitoring",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "coverage>=7.4",
  "mypy>=1.8",
  "pytest>=8.0",
  "ruff>=0.4",
]

[project.scripts]
telecom-log-analyzer = "telecom_log_analyzer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers --strict-config"

[tool.coverage.run]
branch = true
source = ["telecom_log_analyzer"]

[tool.coverage.report]
show_missing = true
fail_under = 85
